Prevent content pane from permanently having a scrollbar visible

--- a/navbar.css
+++ b/navbar.css
@@ -483,7 +483,7 @@ nav {
 .nav-item-content {
     width: calc(100% - 30px);
     height: calc(100% - 30px);
-    overflow-y: scroll;
+    overflow-y: hidden;
 
 }
 
